--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/jsonic-1.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/kengo/git/AIWolfClient/lib/aiwolf-client-0.1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/kengo/git/AIWolfClient/lib/aiwolf-common-0.1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/kengo/git/AIWolfClient/lib/aiwolf-server-0.1.8.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/AIWolfCommon"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
