--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/jsonic-1.3.2.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/AIWolfCommon"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/AiWolfCommon"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
